chore: harden CORS configuration and isolate test profile